Limpiando la alfombra

--- a/pru.html
+++ b/pru.html
@@ -6,6 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi velit iusto dolores, dolor facere doloremque quibusdam atque cum modi pariatur aliquid minus ipsum. Totam ducimus sed rerum iure, quibusdam itaque?</p>
+	<p>Nihil quos dolor magni dicta, voluptate excepturi iste blanditiis natus alias, tempora ea minus obcaecati esse. Nam, vero accusantium doloremque sequi facilis porro quos quo enim aperiam. Maxime, distinctio ab!</p>
 </body>
 </html>
