Texto en CSS. Comenzando cajas en CSS

--- a/aprendiendo-css/02-fuentes/fuentes.html
+++ b/aprendiendo-css/02-fuentes/fuentes.html
@@ -12,5 +12,6 @@
 	<h1>Fuentes en CSS con Víctor Robles WEB</h1>
 	<h3>Soy el subtítulo de la página</h3>
 	<p>Soy un texto de prueba para aplicarle fuentes</p>
+	<h3 class="nameColor">Colores por nombre</h3>
 </body>
 </html>
