Posicionamiento de cajas

--- a/aprendiendo-css/04-cajas/index.html
+++ b/aprendiendo-css/04-cajas/index.html
@@ -4,17 +4,28 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cajas en CSS con Víctor Robles</title>
+	<link rel="shortcut icon" href="../../common/css-programming.ico">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<h1>Cajas en CSS con Víctor Robles</h1>
 
-	<div id="caja1">
-		<p>Contenido de la caja 1</p>
-	</div>
-
-	<section id="caja2">
-		<p>Contenido de la caja 2</p>
+	<!-- ELEMENTOS FLOTADOS -->
+	<section id="cajas">
+		<div class="caja">
+			<p>Contenido de la caja 1</p>
+		</div>
+	
+		<div class="caja">
+			<p>Contenido de la caja 2</p>
+		</div>
 	</section>
+	
+	<!-- LIMPIAR FLOTADOS -->
+	<div class="clearfix"></div>
+	<!-- ELEMENTOS NO FLOTADOS -->
+	<h2>Contenido después de las cajas posicionadas</h2>
+	<p>Texto de prueba</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero ducimus eos dolores inventore minus maxime cupiditate. Dolorum reiciendis officiis ipsa, molestias quisquam odit aliquam recusandae enim rerum sit quibusdam esse nostrum provident, consectetur reprehenderit eligendi ipsum doloremque ducimus ab. Omnis, odit a. Delectus laborum necessitatibus dolorem nobis quasi aspernatur nihil ullam rerum? Maxime dolorem laudantium delectus ipsam voluptates sequi quam, laborum qui deleniti nemo, repellendus vel harum at libero quas quidem, excepturi aut itaque et illo minus facilis officia earum! Soluta earum sit nulla reprehenderit veniam nam blanditiis nemo vero eligendi enim quas laborum dolores ad quam inventore nesciunt accusamus id odio modi praesentium, quibusdam voluptatibus porro! Voluptates et, libero nulla in voluptate mollitia? Hic, ducimus quis! Ea voluptas aperiam nisi officia eaque ducimus neque soluta corrupti molestias placeat provident suscipit reiciendis, inventore aut fugit, a hic aliquid error cum enim minus! Dolore, consequuntur fugiat? Voluptate, at ea voluptatibus, in impedit, quod praesentium animi repudiandae voluptates molestias sit tempora ipsam consequatur illum quos! Quos neque expedita consectetur rerum aspernatur, perferendis, totam ullam est soluta iste accusantium iusto eveniet sint in illo adipisci fugiat ab architecto ipsam reprehenderit blanditiis dolores magnam eum reiciendis. Provident est optio cupiditate voluptates vitae deleniti incidunt qui voluptas natus, perspiciatis sit beatae consequatur. Ullam, pariatur? Quas dicta laboriosam inventore recusandae fuga id, minima itaque consequuntur minus, impedit tempora beatae! Aliquid porro veritatis, fugit reprehenderit temporibus magnam repellat quos, culpa, nostrum similique sit voluptate voluptatibus repudiandae deleniti molestias beatae tenetur omnis natus? Inventore alias doloremque dolore quam quo aperiam magni corrupti ex, dolores animi eius debitis? Neque, possimus nesciunt eligendi a commodi itaque. Omnis odit atque nam natus quis alias! Cumque, incidunt earum reprehenderit id ea velit unde nam animi eveniet ab sint esse libero totam nulla, a commodi tempore ipsam, ipsum similique ipsa dicta dolor delectus?</p>
 </body>
 </html>
