--- a/aprendiendo-css/04-cajas/index.html
+++ b/aprendiendo-css/04-cajas/index.html
@@ -19,6 +19,31 @@
 		<div class="caja">
 			<p>Contenido de la caja 2</p>
 		</div>
+		<div class="caja">
+			<p>Contenido de la caja 3</p>
+		</div>
+	
+		<div class="caja">
+			<p>Contenido de la caja 4</p>
+		</div>
+		<div class="caja">
+			<p>Contenido de la caja 5</p>
+		</div>
+	
+		<div class="caja">
+			<p>Contenido de la caja 6</p>
+		</div>
+		<div class="caja">
+			<p>Contenido de la caja 7</p>
+		</div>
+	
+		<div class="caja">
+			<p>Contenido de la caja 8</p>
+		</div>
+		<div class="caja">
+			<p>Contenido de la caja 9</p>
+		</div>
+		<div class="clearfix"></div>
 	</section>
 	
 	<!-- LIMPIAR FLOTADOS -->
