--- a/aprendiendo-css/05-ejercicio/index.html
+++ b/aprendiendo-css/05-ejercicio/index.html
@@ -3,10 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio con HTML y CSS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div id="general">
+        <header id="header">
+            <h1>Ejercicio con HTML y CSS</h1>
+        </header>
+        <nav id="menu">
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Artículos</a></li>
+                <li><a href="#">Categorías</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+        <section id="contenido">
+            <div class="caja">
+                <h2>Caja 1</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 2</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 3</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 4</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 5</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 6</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 7</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 8</h2>
+            </div>
+        </section>
+        <sidebar id="lateral">
+            <div class="caja">
+                <h2>Elemento de la barra lateral</h2>
+            </div>
+        </sidebar>
+        <footer id="footer">
+            Todos los derechos reservados &copy; Víctor Robles WEB
+        </footer>
+    </div>
     
 </body>
 </html>
