--- a/aprendiendo-css/05-ejercicio/index.html
+++ b/aprendiendo-css/05-ejercicio/index.html
@@ -18,8 +18,10 @@
                 <li><a href="#">Categorías</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
+            <div class="clearfix"></div>
         </nav>
         <section id="contenido">
+            <h1>Cajas del contenido principal</h1>
             <div class="caja">
                 <h2>Caja 1</h2>
             </div>
@@ -45,11 +47,12 @@
                 <h2>Caja 8</h2>
             </div>
         </section>
-        <sidebar id="lateral">
+        <aside id="lateral">
             <div class="caja">
                 <h2>Elemento de la barra lateral</h2>
             </div>
-        </sidebar>
+        </aside>
+        <div class="clearfix"></div>
         <footer id="footer">
             Todos los derechos reservados &copy; Víctor Robles WEB
         </footer>
