--- a/aprendiendo-css/05-ejercicio/index.html
+++ b/aprendiendo-css/05-ejercicio/index.html
@@ -25,7 +25,7 @@
             <div class="caja">
                 <h2>Caja 1</h2>
             </div>
-            <div class="caja">
+            <div class="caja sombra-interior">
                 <h2>Caja 2</h2>
             </div>
             <div class="caja">
@@ -50,6 +50,7 @@
         <aside id="lateral">
             <div class="caja">
                 <h2>Elemento de la barra lateral</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt pariatur accusamus nisi vero minus fuga dolor ratione at excepturi, animi quidem molestiae optio eius distinctio expedita asperiores repellendus, illo, vel natus voluptatibus placeat. Quia laboriosam, sit eveniet saepe dolores optio distinctio eos sequi vel, voluptas nemo molestias sed doloremque voluptatibus consectetur culpa rerum unde. Recusandae natus blanditiis odio. Vel sunt, pariatur asperiores totam quod nesciunt facilis cum nulla quibusdam quasi minima laudantium amet omnis! Pariatur rem quas deleniti quibusdam ab libero accusantium dolorem? Cupiditate voluptates illum, consequuntur voluptatibus pariatur dignissimos facilis perferendis nesciunt harum totam aspernatur architecto vero labore accusantium quae dolores aperiam. Provident ea officiis, quaerat perspiciatis architecto esse temporibus ducimus saepe corporis voluptatum hic aliquid nam doloribus dignissimos rem odit sit praesentium dolor aperiam vitae inventore laudantium. Odit exercitationem quia vel tempore accusantium beatae, totam aut, enim laboriosam cum ipsam quisquam fuga autem veniam fugiat natus nihil nisi, eaque fugit facilis. Id dolores facere tempora eos sapiente nostrum animi, similique soluta placeat inventore! Aliquam, veritatis numquam? Ipsum voluptates iure inventore doloremque odit maxime repellendus corporis dolor, cum magni provident voluptatem deleniti repudiandae quas accusamus, aliquam quam. Mollitia eos pariatur hic modi dolorem veniam at magni excepturi voluptatum consequatur omnis culpa a, veritatis debitis. Laborum expedita quam porro tenetur. Corporis ratione necessitatibus accusamus illo. In officiis incidunt rem repellat temporibus deserunt, eum minus sint ipsam! Repellendus ullam a veritatis minima dolorem, vitae ab nisi cupiditate possimus ad saepe, cumque eum aperiam voluptate autem dolores? Reiciendis debitis illo minima quia accusantium praesentium veritatis et corrupti aliquid corporis, tempora fugit nesciunt eaque eligendi, necessitatibus iste, saepe placeat quisquam dolorum ipsum aspernatur numquam dolores neque quidem. Nobis itaque cupiditate deleniti exercitationem velit nam quia labore. Natus nisi odio, iusto, nostrum tenetur ipsum explicabo necessitatibus voluptate impedit repellat amet, aspernatur asperiores facilis aut!</p>
             </div>
         </aside>
         <div class="clearfix"></div>
@@ -57,6 +58,14 @@
             Todos los derechos reservados &copy; Víctor Robles WEB
         </footer>
     </div>
-    
+    <div class="libre libre1">
+        Soy la caja libre 1
+    </div>    
+    <div class="libre libre2">
+        Soy la caja libre 2
+    </div>
+    <div class="fija">
+        Soy la caja fija
+    </div> 
 </body>
 </html>
