Pseudoclases en CSS

--- a/aprendiendo-css/06-pseudoclases/index.html
+++ b/aprendiendo-css/06-pseudoclases/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Pseudoclases - Víctor Robles WEB</h1>
+    <ul>
+        <li>PHP</li>
+        <li>JavaScript</li>
+        <li>Go</li>
+        <li>C</li>
+        <li>C++</li>
+    </ul>
+    <a href="https://worldcode.info" id="mi-enlace">Worldcode</a>
+    <br>
+    <input type="text">
 </body>
 </html>
