--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -12,9 +12,24 @@
     <header id="header">
         <div id="logotipo">
             <img src="img/logo.png" alt="Logotipo">
-            <h1><a href="index.html">Máster en CSS</a></h1>
+            <h1><a href="index.html">MÁSTER EN CSS</a></h1>
         </div>
     </header>
     <!-- Fin de la cabecera -->
+
+    <!-- Menú de navegación -->
+    <ul>
+        <li><a href="">Inicio</a></li>
+        <li><a href="">Contenido</a></li>
+        <li><a href="">Requerimientos</a></li>
+        <li><a href="">Lenguajes</a></li>
+        <li><a href="">Frameworks</a></li>
+        <li><a href="">Proyectos</a></li>
+        <li><a href="">El instructor</a></li>
+        <li><a href="">Reseñas</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contacto</a></li>
+    </ul>
+    <!-- Fin del menú de navegación -->
 </body>
 </html>
