--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -18,18 +18,34 @@
     <!-- Fin de la cabecera -->
 
     <!-- Menú de navegación -->
-    <ul>
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Contenido</a></li>
-        <li><a href="">Requerimientos</a></li>
-        <li><a href="">Lenguajes</a></li>
-        <li><a href="">Frameworks</a></li>
-        <li><a href="">Proyectos</a></li>
-        <li><a href="">El instructor</a></li>
-        <li><a href="">Reseñas</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contacto</a></li>
-    </ul>
+    <nav id="nav">
+        <ul>
+            <li><a href="">El Inicio</a></li>
+            <li><a href="">Contenido</a></li>
+            <li><a href="">Requerimientos</a></li>
+            <li>
+                <a href="">Lenguajes</a>
+                <ul>
+                    <li><a href="">HTML</a></li>
+                    <li><a href="">CSS</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="">Frameworks</a>
+                <ul>
+                    <li><a href="">LESS</a></li>
+                    <li><a href="">SAS</a></li>
+                    <li><a href="">Bootstrap 4</a></li>
+                </ul>
+            </li>
+            <li><a href="">Proyectos</a></li>
+            <li><a href="">El instructor</a></li>
+            <li><a href="">Reseñas</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contacto</a></li>
+        </ul>
+    </nav>
+    
     <!-- Fin del menú de navegación -->
 </body>
 </html>
