Barra lateral, HTML y comienzo estilos

--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="img/logo.png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <!-- Inicio de la cabecera -->
     <header id="header">
@@ -45,7 +47,66 @@
             <li><a href="">Contacto</a></li>
         </ul>
     </nav>
-    
     <!-- Fin del menú de navegación -->
+    <!-- Inicio del contenido central -->
+    <div id="content">
+        <!-- Inicio de la barra lateral-->
+        <aside id="aside">
+            <div class="widget" id="login">
+                <h3>Entrar a la web</h3>
+                <form action="">
+                    <label for="">Usuario:</label>
+                    <input type="text" name="" id="">
+
+                    <label for="">Contraseña:</label>
+                    <input type="password" name="" id="">
+
+                    <input type="submit" value="Entrar">
+                </form>
+                <a href="#">Zona de alumnos</a>
+                <a href="#">Zona del profesor</a>
+                <a href="#">Acceso a calificaciones</a>
+            </div>
+            <div class="widget" id="login">
+                <h3>Aula virtual 1</h3>
+                <form action="">
+                    <label for="">Nombre de usuario:</label>
+                    <input type="text" name="" id="">
+
+                    <label for="">Contraseña:</label>
+                    <input type="password" name="" id="">
+
+                    <input type="submit" value="Entrar">
+                </form>
+            </div>
+            <div class="widget" id="login">
+                <h3>Aula virtual 2</h3>
+                <form action="">
+                    <label for="">Usuario:</label>
+                    <input type="text" name="" id="">
+
+                    <label for="">Contraseña:</label>
+                    <input type="password" name="" id="">
+
+                    <input type="submit" value="Entrar">
+                </form>
+            </div>
+            <div class="widget" id="login">
+                <h3>Enlaces de interés</h3>
+                <ul>
+                    <li><a href="https://www.udemy.com/course/master-en-css-responsive-sass-flexbox-grid-y-boostrap-4/learn/">Máster en CSS: Responsive, SASS, Flexbox, Grid y Bootstrap</a></li>
+                    <li><a href="https://www.udemy.com/course/master-en-php-sql-poo-mvc-laravel-symfony-4-wordpress/learn/">Master en PHP, POO, MVC, Laravel, Sympfony, Wordpress</a></li>
+                    <li><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=1712652">Master en webs Full Stack: Angular, Node Laravel</a></li>
+                    <li><a href="https://www.udemy.com/course/desarrollo-sistemas-web-php-poo-mysql-jquery-ajax-bootstrap/learn/">Desarrollo de sistemas web en PHP 7, POO, MySQL, jQuery y Ajax</a></li>
+                    <li><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=1337000">Master en JavaScript: Aprender JS, jQuery, Angular, NodeJS</a></li>
+                </ul>
+            </div>
+        </aside>
+        <!-- Fin de la barra lateral -->
+    </div>
+    
+
+    <!-- Fin del contenido central-->
 </body>
+
 </html>
