Terminando la barra lateral

--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -22,7 +22,7 @@
     <!-- Menú de navegación -->
     <nav id="nav">
         <ul>
-            <li><a href="">El Inicio</a></li>
+            <li><a href="">Inicio</a></li>
             <li><a href="">Contenido</a></li>
             <li><a href="">Requerimientos</a></li>
             <li>
@@ -101,6 +101,11 @@
                     <li><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=1337000">Master en JavaScript: Aprender JS, jQuery, Angular, NodeJS</a></li>
                 </ul>
             </div>
+        </aside>
+        <aside id="frase">
+            <p>Frase del día:</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, explicabo! In eum veritatis dolorem unde fugiat! Quibusdam illo ullam sint provident blanditiis, explicabo ut voluptatum dolor consequuntur dolorum voluptate rerum laudantium pariatur in. Ullam aperiam eius quaerat magnam voluptates commodi blanditiis temporibus, dolorem dolore laudantium! Repudiandae cum veritatis dolores accusamus?</p>
+            <a href="#">Leer más frases</a>
         </aside>
         <!-- Fin de la barra lateral -->
     </div>
