--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -68,7 +68,7 @@
                 <a href="#">Acceso a calificaciones</a>
             </div>
             <div class="widget" id="login">
-                <h3>Aula virtual 1</h3>
+                <h3 class="blue">Aula virtual 1</h3>
                 <form action="">
                     <label for="">Nombre de usuario:</label>
                     <input type="text" name="" id="">
@@ -80,7 +80,7 @@
                 </form>
             </div>
             <div class="widget" id="login">
-                <h3>Aula virtual 2</h3>
+                <h3 class="red">Aula virtual 2</h3>
                 <form action="">
                     <label for="">Usuario:</label>
                     <input type="text" name="" id="">
