Comienzo de las secciones centrales

--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -102,12 +102,102 @@
                 </ul>
             </div>
         </aside>
+        
+        <!-- Fin de la barra lateral -->
+
+        <!-- Inicio de las secciones -->
+        <div id="sections">
+            <section id="frontend">
+                <span id="sticker">
+                    <img class="stickerOne" src="img/scotch.png" alt="Icono de la sección">
+                    <img class="stickerTwo" src="img/scotch.png" alt="Icono de la sección">
+                </span>
+                <h2 class="titulo">Noticias de front-end</h2>
+                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>
+            </section>
+            <section id="backend">
+                <span id="sticker">
+                    <img class="stickerOne" src="img/scotch.png" alt="Icono de la sección">
+                    <img class="stickerTwo" src="img/scotch.png" alt="Icono de la sección">
+                </span>
+                <h2 class="titulo">Noticias de back-end</h2>
+                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>
+            </section>
+            <section id="instructor">
+                <span id="sticker">
+                    <img class="stickerOne" src="img/scotch.png" alt="Icono de la sección">
+                    <img class="stickerTwo" src="img/scotch.png" alt="Icono de la sección">
+                </span>
+                <h2 class="titulo">Noticias del instructor</h2>
+                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>                <article class="article">
+                    <p><a href="#">Título de la entrada</a>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto, perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae repudiandae aperiam voluptatum perferendis tenetur beatae temporibus accusantium culpa dolor ab nihil modi, earum minima provident?
+                    </p>
+                    <span class="date">[20-12-2020. Víctor Robles web]</span>
+                </article>
+            </section>
+        </div>
+        <!-- Fin de las secciones -->
         <aside id="frase">
             <p>Frase del día:</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque, explicabo! In eum veritatis dolorem unde fugiat! Quibusdam illo ullam sint provident blanditiis, explicabo ut voluptatum dolor consequuntur dolorum voluptate rerum laudantium pariatur in. Ullam aperiam eius quaerat magnam voluptates commodi blanditiis temporibus, dolorem dolore laudantium! Repudiandae cum veritatis dolores accusamus?</p>
             <a href="#">Leer más frases</a>
         </aside>
-        <!-- Fin de la barra lateral -->
     </div>
     
 
