Estilos para las secciones. Continuación. Colores títulos

--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -178,7 +178,7 @@
                     <img class="stickerOne" src="img/scotch.png" alt="Icono de la sección">
                     <img class="stickerTwo" src="img/scotch.png" alt="Icono de la sección">
                 </span>
-                <h2 class="titulo">Noticias de back-end</h2>
+                <h2 class="titulo red">Noticias de back-end</h2>
                 <article class="article">
                     <p><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
@@ -225,7 +225,7 @@
                     <img class="stickerOne" src="img/scotch.png" alt="Icono de la sección">
                     <img class="stickerTwo" src="img/scotch.png" alt="Icono de la sección">
                 </span>
-                <h2 class="titulo">Noticias del instructor</h2>
+                <h2 class="titulo orange">Noticias del instructor</h2>
                 <article class="article">
                     <p><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
