Retoques finales al diseño

--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -133,7 +133,7 @@
                 </span>
                 <h2 class="titulo">Noticias de front-end</h2>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -143,7 +143,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -153,7 +153,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -163,7 +163,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -180,7 +180,7 @@
                 </span>
                 <h2 class="titulo red">Noticias de back-end</h2>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -190,7 +190,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -200,7 +200,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -210,7 +210,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -227,7 +227,7 @@
                 </span>
                 <h2 class="titulo orange">Noticias del instructor</h2>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -237,7 +237,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -247,7 +247,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -257,7 +257,7 @@
                     <span class="date">[20-12-2020. Víctor Robles web]</span>
                 </article>
                 <article class="article">
-                    <p><a href="#">Título de la entrada</a>
+                    <p><span class="icon">a</span><a href="#">Título de la entrada</a>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum aliquid placeat iusto,
                         perspiciatis fugiat ducimus consequatur similique neque dolores non voluptatum officiis nihil
                         quia explicabo assumenda atque, eaque voluptate molestiae ratione voluptas. Ipsam quae
@@ -269,11 +269,19 @@
             </section>
         </div>
         <!-- Fin de las secciones -->
-
+        
+    <div class="clearfix"></div>
+        <div id="history">
+            <a href="#">[Ver histórico de noticias]</a>
+        </div>
     </div>
 
 
     <!-- Fin del contenido central-->
+    <footer id="footer">
+        <p>&copy; Desarrollado por Víctor Robles WEB</p>
+        <p>Más contenido y formación de desarrollo web en <a href="https://victorroblesweb.es/academy">victorroblesweb.es/academy</a></p>
+    </footer>
 </body>
 
 </html>
