Proyecto CSS finalizado

--- a/maquetacion-1/index.html
+++ b/maquetacion-1/index.html
@@ -280,7 +280,7 @@
     <!-- Fin del contenido central-->
     <footer id="footer">
         <p>&copy; Desarrollado por Víctor Robles WEB</p>
-        <p>Más contenido y formación de desarrollo web en <a href="https://victorroblesweb.es/academy">victorroblesweb.es/academy</a></p>
+        <p>Más contenido y formación de desarrollo web en <a href="https://victorroblesweb.es/academy" title="Página web de Víctor Robles" target="_blank">victorroblesweb.es/academy</a></p>
     </footer>
 </body>
 
