--- a/aprendiendo-responsive/index.html
+++ b/aprendiendo-responsive/index.html
@@ -29,7 +29,14 @@
                 <article>
                     <h2>Artículo 4</h2>
                 </article>
+                <article>
+                    <h2>Artículo 5</h2>
+                </article>
+                <article>
+                    <h2>Artículo 6</h2>
+                </article>
             </section>
+            <div class="clearfix"></div>
         </section>
         <footer>
             Pie de página
