Maquetando el banner

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -28,5 +28,15 @@
         
     </header>
     <!-- Fin de la Cabecera -->
+
+    <!-- Inicio Banner -->
+    <section class="wrap">
+        <section id="info">
+            <div id="banner">
+                <h1>CURSOS DE DESARROLLO WEB CON VÍCTOR ROBLES WEB</h1>
+            </div>
+        </section>
+    </section>
+    <!-- Fin Banner -->
 </body>
 </html>
