--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -35,6 +35,33 @@
             <div id="banner">
                 <h1>CURSOS DE DESARROLLO WEB CON VÍCTOR ROBLES WEB</h1>
             </div>
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">H</p>
+                    <h2 class="category">Desarrollo Web</h2>
+                    <p class="description">Aprende los principales lenguajes para desarrollar webs. ¡Conviértete en un webmaster!</p>
+                </div>
+                <div class="card">
+                    <p class="icon">_</p>
+                    <h2 class="category">Sistemas Operativos</h2>
+                    <p class="description">Aprende a administrar sistemas Linux y Windows</p>
+                </div>
+                <div class="card">
+                    <p class="icon">S</p>
+                    <h2 class="category">Hardware</h2>
+                    <p class="description">Conoce los entresijos del hardware.</p>
+                </div>
+                <div class="card">
+                    <p class="icon">u</p>
+                    <h2 class="category">Redes e Internet</h2>
+                    <p class="description">Aprende a configurar y administrar redes informáticas y servidores</p>
+                </div>
+                <div class="card">
+                    <p class="icon">a</p>
+                    <h2 class="category">Bases de datos</h2>
+                    <p class="description">Aprende a montar y administrar bases de datos.</p>
+                </div>
+            </div>
         </section>
     </section>
     <!-- Fin Banner -->
