HTML del aside, comienzo

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -29,12 +29,16 @@
     </header>
     <!-- Fin de la Cabecera -->
 
-    <!-- Inicio Banner -->
-    <section class="wrap">
+    
+    <section class="wrap wrap-content">
         <section id="info">
+            <!-- Inicio Banner -->
             <div id="banner">
                 <h1>CURSOS DE DESARROLLO WEB CON VÍCTOR ROBLES WEB</h1>
             </div>
+            <!-- Fin Banner -->
+
+            <!-- Inicio Tarjetas -->
             <div id="cards">
                 <div class="card">
                     <p class="icon">H</p>
@@ -62,8 +66,39 @@
                     <p class="description">Aprende a montar y administrar bases de datos.</p>
                 </div>
             </div>
+            <!-- Fin Tarjetas -->
         </section>
+        <!-- Inicio Barra lateral -->
+        <aside id="lateral">
+            <h3>BUSCAR</h3>
+            <div id="buscar">
+                <form action="">
+                    <input type="text" name="" id="">
+                    <input type="button" value="L">
+                </form>
+            </div>
+            <h3>LOGIN</h3>
+            <div id="login">
+                <form action="">
+                    <label id="user" for="">U</label>
+                    <input type="email" name="" id="">
+
+                    <label for="" id="password">w</label>
+                    <input type="password" name="" id="">
+
+                    <input type="submit" value="Entrar">
+                    <input type="reset" value="Limpiar">
+
+                    <a href="#">Regístrate</a>
+                    <a href="#">¿Has olvidado la contraseña?</a>
+                </form>
+            </div>
+            <h3>REDES SOCIALES</h3>
+
+            <h3>PATROCINADORES</h3>
+        </aside>
+        <!-- Fin Barra Lateral -->
     </section>
-    <!-- Fin Banner -->
+    
 </body>
 </html>
