HTML Barra lateral

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -94,8 +94,21 @@
                 </form>
             </div>
             <h3>REDES SOCIALES</h3>
-
+            <div id="social">
+                <div class="twitter">
+                    <a href="#">t</a>
+                </div>
+                <div class="facebook">
+                    <a href="#">f</a>
+                </div>
+                <div class="youtube">
+                    <a href="#">y</a>
+                </div>
+            </div>
             <h3>PATROCINADORES</h3>
+            <div id="sponsors">
+                
+            </div>
         </aside>
         <!-- Fin Barra Lateral -->
     </section>
