Estilos de las cajas laterales

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -71,30 +71,30 @@
         <!-- Inicio Barra lateral -->
         <aside id="lateral">
             <h3>BUSCAR</h3>
-            <div id="buscar">
+            <div id="search">
                 <form action="">
                     <input type="text" name="" id="">
-                    <input type="button" value="L">
+                    <input type="button" value="L" class="icon">
                 </form>
             </div>
             <h3>LOGIN</h3>
-            <div id="login">
+            <div id="login" class="aside-box">
                 <form action="">
-                    <label id="user" for="">U</label>
+                    <label id="user" for="" class="icon">U</label>
                     <input type="email" name="" id="">
 
-                    <label for="" id="password">w</label>
+                    <label for="" id="password" class="icon">w</label>
                     <input type="password" name="" id="">
 
                     <input type="submit" value="Entrar">
                     <input type="reset" value="Limpiar">
 
-                    <a href="#">Regístrate</a>
+                    <a href="#">Regístrate aquí</a>
                     <a href="#">¿Has olvidado la contraseña?</a>
                 </form>
             </div>
             <h3>REDES SOCIALES</h3>
-            <div id="social">
+            <div id="social" class="icon aside-box">
                 <div class="twitter">
                     <a href="#">t</a>
                 </div>
@@ -106,8 +106,8 @@
                 </div>
             </div>
             <h3>PATROCINADORES</h3>
-            <div id="sponsors">
-                
+            <div id="sponsors" class="aside-box">
+
             </div>
         </aside>
         <!-- Fin Barra Lateral -->
