Estilos de los enlaces a las redes sociales

--- a/maquetacion-2/index.html
+++ b/maquetacion-2/index.html
@@ -94,14 +94,14 @@
                 </form>
             </div>
             <h3>REDES SOCIALES</h3>
-            <div id="social" class="icon aside-box">
-                <div class="twitter">
+            <div id="social" class="aside-box">
+                <div class="icon">
                     <a href="#">t</a>
                 </div>
-                <div class="facebook">
+                <div class="icon">
                     <a href="#">f</a>
                 </div>
-                <div class="youtube">
+                <div class="icon">
                     <a href="#">y</a>
                 </div>
             </div>
